Added unordered list  for navigation

--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
 </head>
 <body>
     <header class="flex-header">
-        
+        <ul>
+            <li>Header Logo</li>
+            <li>header link one</li>
+            <li>header link two</li>
+            <li>header link three</li>
+        </ul>
     </header>
 </body>
 </html>
