--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
         </ul>
 
         <h1>This Webiste is Awesome</h1>
+        <p>This website has some subtext that goes here under the main title. It's smaller font and the color is lower contrast</p>
+        
     </header>
 </body>
 </html>
