--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
         <h1>This Webiste is Awesome</h1>
         <p>This website has some subtext that goes here under the main title. It's smaller font and the color is lower contrast</p>
-        
+        <button>Sign up</button>
     </header>
 </body>
 </html>
