Added paragraph in main tag

--- a/index.html
+++ b/index.html
@@ -20,5 +20,8 @@
         <p>This website has some subtext that goes here under the main title. It's smaller font and the color is lower contrast</p>
         <button>Sign up</button>
     </header>
+    <main>
+        <p>Some random information</p>
+    </main>
 </body>
 </html>
