Added class, right-links and removed header logo
inside the unordered list since it is not considered as link

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <header class="flex-header">
-        <ul>
-            <li>Header Logo</li>
+        <p>Header logo</p>
+        <ul class="right-links">
             <li>header link one</li>
             <li>header link two</li>
             <li>header link three</li>
