--- a/index.html
+++ b/index.html
@@ -8,18 +8,19 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header class="flex-header">
+    <header class="flex-header-one">
         <p>Header logo</p>
         <ul class="right-links">
             <li>header link one</li>
             <li>header link two</li>
             <li>header link three</li>
         </ul>
-
+    </header>
+    <header class="flex-header-two">
         <h1>This Webiste is Awesome</h1>
         <p>This website has some subtext that goes here under the main title. It's smaller font and the color is lower contrast</p>
         <button>Sign up</button>
-    </header>
+    </header>   
     <main>
         <p>Some random information</p>
     </main>
