Added class for header logo

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header class="flex-header-one">
-        <p>Header logo</p>
+        <p class="header-logo">Header logo</p>
         <ul class="right-links">
             <li>header link one</li>
             <li>header link two</li>
