Added some comments

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+<!--This is the header which is divided into two sections 
+with different class on it, to make the design more possible-->
     <header class="flex-header-one">
         <p class="header-logo">Header logo</p>
         <ul class="right-links">
