Added an image in header

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@ with different class on it, to make the design more possible-->
         <h1>This Webiste is Awesome</h1>
         <p class="secondary-text">This website has some subtext that goes here under the main title. It's smaller font and the color is lower contrast</p>
         <button>Sign up</button>
+        <img src="img/sea.jpg">
     </header>   
     <main>
         <p>Some random information</p>
