--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@ with different class on it, to make the design more possible-->
         <h1>This Webiste is Awesome</h1>
         <p class="secondary-text">This website has some subtext that goes here under the main title. It's smaller font and the color is lower contrast</p>
         <button>Sign up</button>
-        <img src="img/sea.jpg">
+    <div class="image-header">
+        <img src="img/sea.jpg" alt="a beautiful sea">
+    </div>
     </header>   
     <main>
         <p>Some random information</p>
