Having problems with aligning image in header

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@ with different class on it, to make the design more possible-->
     <header class="flex-header-two">
         <h1>This Webiste is Awesome</h1>
         <p class="secondary-text">This website has some subtext that goes here under the main title. It's smaller font and the color is lower contrast</p>
+        <ul class="right-side">
+            <li><img src="img/sea.jpg" width="200px"></li>
+        </ul>
         <button>Sign up</button>
     </header>   
     <main>
