Put text in header two in a div container

--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@ with different class on it, to make the design more possible-->
         </ul>
     </header>
     <header class="flex-header-two">
+        <div class="text">
         <h1>This Webiste is Awesome</h1>
         <p class="secondary-text">This website has some subtext that goes here under the main title. It's smaller font and the color is lower contrast</p>
-        <ul class="right-side">
-            <li><img src="img/sea.jpg" width="200px"></li>
-        </ul>
         <button>Sign up</button>
+        </div>
+        <img src="img/sea.jpg" alt="a beautiful cloudy sea">
     </header>   
     <main>
         <p>Some random information</p>
