Added a class for main tag

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ with different class on it, to make the design more possible-->
         </div>
         <img src="img/sea.jpg" alt="a beautiful cloudy sea">
     </header>   
-    <main>
+    <main class="flex-main">
         <p>Some random information</p>
     </main>
 </body>
