Added . in paragraph

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ with different class on it, to make the design more possible-->
         <img src="img/sea.jpg" alt="a beautiful cloudy sea">
     </header>   
     <main class="flex-main">
-        <p>Some random information</p>
+        <p>Some random information.</p>
     </main>
 </body>
 </html>
