Added a div container for rose images

--- a/index.html
+++ b/index.html
@@ -28,6 +28,12 @@ with different class on it, to make the design more possible-->
     </header>   
     <main class="flex-main">
         <p>Some random information.</p>
+        <div class="rose-images">
+            <img src="img/red-rose.jpg" alt="A red rose">
+            <img src="img/orange-rose.jpg" alt="A orange rose">
+            <img src="img/pink-rose.jpg" alt="A pink rose">
+            <img src="img/yellow-rose.jpg" alt="A yellow rose">
+        </div>
     </main>
 </body>
 </html>
