Put each images in another div container

--- a/index.html
+++ b/index.html
@@ -28,11 +28,21 @@ with different class on it, to make the design more possible-->
     </header>   
     <main class="flex-main">
         <p>Some random information.</p>
-        <div class="rose-images">
+        <div class="rose-one">
             <img src="img/red-rose.jpg" alt="A red rose">
-            <img src="img/orange-rose.jpg" alt="A orange rose">
+            <p>Red roses symbolize all that's associated with love, passion, and romance since time eternity.</p>
+        </div>
+        <div class="rose-two">
+            <img src="img/orange-rose.jpg" alt="A Orange rose">
+            <p>orange rose symbolizes more passionate and fiery emotions than the romantic allure of a red rose. A bouquet of fiery orange roses can help you say that you are ready to take your relationship to the next level.</p>
+        </div>
+        <div class="rose-three">
             <img src="img/pink-rose.jpg" alt="A pink rose">
+            <p>pink roses is gratitude and admiration. They're the perfect choice for the people you appreciate most, like your friends, siblings or teachers.</p>
+        </div>
+        <div class="rose-four">
             <img src="img/yellow-rose.jpg" alt="A yellow rose">
+            <p>Yellow roses symbolize friendship and joy. They are also used to represent those feelings that are associated with friendship such as warmth, delight, gladness, caring, and affection.</p>
         </div>
     </main>
 </body>
