Add another class

--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@ with different class on it, to make the design more possible-->
         <img src="img/sea.jpg" alt="a beautiful cloudy sea">
     </header>   
     <main class="flex-main">
-        <p>Some random information.</p>
+        <p class="header-main">Some random information.</p>
+        <div class="rose-images">
         <div class="rose-one">
             <img src="img/red-rose.jpg" alt="A red rose">
             <p>Red roses symbolize all that's associated with love, passion, and romance since time eternity.</p>
@@ -44,6 +45,7 @@ with different class on it, to make the design more possible-->
             <img src="img/yellow-rose.jpg" alt="A yellow rose">
             <p>Yellow roses symbolize friendship and joy. They are also used to represent those feelings that are associated with friendship such as warmth, delight, gladness, caring, and affection.</p>
         </div>
+    </div>
     </main>
 </body>
 </html>
