--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@ with different class on it, to make the design more possible-->
         </div>
         <img src="img/sea.jpg" alt="a beautiful cloudy sea">
     </header>   
-    <main class="flex-main">
+
+    <main>
         <p class="header-main">Some random information.</p>
         <div class="rose-images">
         <div class="rose">
