Added class and paragraph for quotes

--- a/index.html
+++ b/index.html
@@ -47,6 +47,12 @@ with different class on it, to make the design more possible-->
             <p>Yellow roses symbolize friendship and joy. They are also used to represent those feelings that are associated with friendship such as warmth, delight, gladness, caring, and affection.</p>
         </div>
     </div>
+    <div class="flex-quotes">
+        <p><em>“A rose dreams of enjoying the company of bees, but none appears. The sun asks: Aren’t you tired of waiting? Yes, but if I close my petals, I will wither and die.”</em></p>
+    <div class="author">
+       <p >-Paulo Coelho</p>
+    </div>
+    </div>
     </main>
 </body>
 </html>
