Added class for bottom of the web page

--- a/index.html
+++ b/index.html
@@ -53,6 +53,14 @@ with different class on it, to make the design more possible-->
        <p >-Paulo Coelho</p>
     </div>
     </div>
+
+    <div class="bottom">
+        <div class="bottom-text">
+            <p>Call to action! It's time</p>
+            <p>Sign up for our product by clicking the button right over there!</p>
+        </div>
+        <button>Sign up</button>
+    </div>
     </main>
 </body>
 </html>
