Added designs for bottom of main section

--- a/index.html
+++ b/index.html
@@ -48,15 +48,14 @@ with different class on it, to make the design more possible-->
         </div>
     </div>
     <div class="flex-quotes">
-        <p><em>“A rose dreams of enjoying the company of bees, but none appears. The sun asks: Aren’t you tired of waiting? Yes, but if I close my petals, I will wither and die.”</em></p>
+        <p><em>“A rose dreams of enjoying the company of bees, but none appears. The sun asks: Aren't you tired of waiting? Yes, but if I close my petals, I will wither and die.”</em></p>
     <div class="author">
        <p >-Paulo Coelho</p>
     </div>
     </div>
-
     <div class="bottom">
         <div class="bottom-text">
-            <p>Call to action! It's time</p>
+            <p><strong>Call to action! It's time</strong></p>
             <p>Sign up for our product by clicking the button right over there!</p>
         </div>
         <button>Sign up</button>
