--- a/index.html
+++ b/index.html
@@ -61,5 +61,9 @@ with different class on it, to make the design more possible-->
         <button>Sign up</button>
     </div>
     </main>
+    <footer class="flex-footer">
+        <p>Copyright &#169; The Odin Project 2022</p>
+        <p>Author: Angel Mae Toldanes</p>
+    </footer>
 </body>
 </html>
