Changed paragraph content for header

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@ with different class on it, to make the design more possible-->
     </header>
     <header class="flex-header-two">
         <div class="text">
-        <h1>This Webiste is Awesome</h1>
-        <p class="secondary-text">This website has some subtext that goes here under the main title. It's smaller font and the color is lower contrast</p>
+        <h1>What roses symbolize you?</h1>
+        <p class="secondary-text">A rose is either a woody perennial flowering plant of the genus Rosa, in the family Rosaceae, or the flower it bears. There are over three hundred species and tens of thousands of cultivars. Roses have different colors and also have their own symbols</p>
         <button>Sign up</button>
         </div>
         <img src="img/sea.jpg" alt="a beautiful cloudy sea">
