--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ with different class on it, to make the design more possible-->
         <p class="secondary-text">A rose is either a woody perennial flowering plant of the genus Rosa, in the family Rosaceae, or the flower it bears. There are over three hundred species and tens of thousands of cultivars. Roses have different colors and also have their own symbols</p>
         <button>Sign up</button>
         </div>
-        <img src="img/sea.jpg" alt="a beautiful cloudy sea">
+        <img src="img/roses.jpg" alt="a beautiful roses">
     </header>   
 
     <main>
