Edit content for paragraph

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ with different class on it, to make the design more possible-->
     <div class="bottom">
         <div class="bottom-text">
             <p><strong>Call to action! It's time</strong></p>
-            <p>Sign up for our product by clicking the button right over there!</p>
+            <p>Sign up for your roses symbol by clicking the button right over there!</p>
         </div>
         <button>Sign up</button>
     </div>
