Added a header logo

--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
 <!--This is the header which is divided into two sections 
 with different class on it, to make the design more possible-->
     <header class="flex-header-one">
-        <p class="header-logo">Header logo</p>
+        <div class="header-logo">
+            <img src="img/rose-logo.png" alt="Rose logo">
+        </div>
         <ul class="right-links">
-            <li>header link one</li>
-            <li>header link two</li>
-            <li>header link three</li>
+            <li>About</li>
+            <li>Help</li>
+            <li>Contact</li>
         </ul>
     </header>
     <header class="flex-header-two">
