Added an anchor tag

--- a/index.html
+++ b/index.html
@@ -1,77 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300&display=swap" rel="stylesheet">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,700;1,300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,700;1,300&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
-<!--This is the header which is divided into two sections 
+    <!--This is the header which is divided into two sections 
 with different class on it, to make the design more possible-->
     <header class="flex-header-one">
         <div class="header-logo">
             <img src="img/rose-logo.png" alt="Rose logo">
         </div>
         <ul class="right-links">
-            <li>About</li>
-            <li>Help</li>
-            <li>Contact</li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Help</a></li>
+            <li><a href="#">Contact</a></li>
         </ul>
     </header>
     <header class="flex-header-two">
         <div class="text">
-        <h1>What roses symbolize you?</h1>
-        <p class="secondary-text">A rose is either a woody perennial flowering plant of the genus Rosa, in the family Rosaceae, or the flower it bears. There are over three hundred species and tens of thousands of cultivars. Roses have different colors and also have their own symbols</p>
-        <button>Sign up</button>
+            <h1>What roses symbolize you?</h1>
+            <p class="secondary-text">A rose is either a woody perennial flowering plant of the genus Rosa, in the
+                family Rosaceae, or the flower it bears. There are over three hundred species and tens of thousands of
+                cultivars. Roses have different colors and also have their own symbols</p>
+            <button>Sign up</button>
         </div>
         <img src="img/roses.jpg" alt="a beautiful roses">
-    </header>   
+    </header>
 
     <main>
         <p class="header-main">Some random information.</p>
         <div class="rose-images">
-        <div class="rose-one">
-            <img src="img/red-rose.jpg" alt="A red rose">
-            <p>Red roses symbolize all that's associated with love, passion, and romance since time eternity.</p>
+            <div class="rose-one">
+                <img src="img/red-rose.jpg" alt="A red rose">
+                <p>Red roses symbolize all that's associated with love, passion, and romance since time eternity.</p>
+            </div>
+            <div class="rose-two">
+                <img src="img/orange-rose.jpg" alt="A Orange rose">
+                <p>orange rose symbolizes more passionate and fiery emotions than the romantic allure of a red rose. A
+                    bouquet of fiery orange roses can help you say that you are ready to take your relationship to the
+                    next level.</p>
+            </div>
+            <div class="rose-three">
+                <img src="img/pink-rose.jpg" alt="A pink rose">
+                <p>pink roses is gratitude and admiration. They're the perfect choice for the people you appreciate
+                    most, like your friends, siblings or teachers.</p>
+            </div>
+            <div class="rose-four">
+                <img src="img/yellow-rose.jpg" alt="A yellow rose">
+                <p>Yellow roses symbolize friendship and joy. They are also used to represent those feelings that are
+                    associated with friendship such as warmth, delight, gladness, caring, and affection.</p>
+            </div>
         </div>
-        <div class="rose-two">
-            <img src="img/orange-rose.jpg" alt="A Orange rose">
-            <p>orange rose symbolizes more passionate and fiery emotions than the romantic allure of a red rose. A bouquet of fiery orange roses can help you say that you are ready to take your relationship to the next level.</p>
+        <div class="flex-quotes">
+            <p><em>“A rose dreams of enjoying the company of bees, but none appears. The sun asks: Aren't you tired of
+                    waiting? Yes, but if I close my petals, I will wither and die.”</em></p>
+            <div class="author">
+                <p>-Paulo Coelho</p>
+            </div>
         </div>
-        <div class="rose-three">
-            <img src="img/pink-rose.jpg" alt="A pink rose">
-            <p>pink roses is gratitude and admiration. They're the perfect choice for the people you appreciate most, like your friends, siblings or teachers.</p>
+        <div class="bottom">
+            <div class="bottom-text">
+                <p><strong>Call to action! It's time</strong></p>
+                <p>Sign up for your roses symbol by clicking the button right over there!</p>
+            </div>
+            <button>Sign up</button>
         </div>
-        <div class="rose-four">
-            <img src="img/yellow-rose.jpg" alt="A yellow rose">
-            <p>Yellow roses symbolize friendship and joy. They are also used to represent those feelings that are associated with friendship such as warmth, delight, gladness, caring, and affection.</p>
-        </div>
-    </div>
-    <div class="flex-quotes">
-        <p><em>“A rose dreams of enjoying the company of bees, but none appears. The sun asks: Aren't you tired of waiting? Yes, but if I close my petals, I will wither and die.”</em></p>
-    <div class="author">
-       <p >-Paulo Coelho</p>
-    </div>
-    </div>
-    <div class="bottom">
-        <div class="bottom-text">
-            <p><strong>Call to action! It's time</strong></p>
-            <p>Sign up for your roses symbol by clicking the button right over there!</p>
-        </div>
-        <button>Sign up</button>
-    </div>
     </main>
     <footer class="flex-footer">
         <p>Copyright &#169; The Odin Project 2022</p>
         <p>Author: Angel Mae Toldanes</p>
     </footer>
 </body>
+
 </html>
